--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "Templates plugin",
 	"description": "Custom templates plugin",
 	"version": "1.0.0",
-	"author": "Kunal Kushwaha",
-	"repository": "https://github.com/kunal-kushwaha/monokle-templates-plugin",
+	"author": "Arsh Jeet Singh",
+	"repository": "https://github.com/Arshjeet2003/monokle-templates-plugin.git",
 	"monoklePlugin": {
-		"id": "com.github.kunal-kushwaha.plugin.templates",
-		"helpUrl": "https://github.com/kunal-kushwaha/monokle-templates-plugin",
+		"id": "com.github.arsh-singh.plugin.templates",
+		"helpUrl": "https://github.com/Arshjeet2003/monokle-templates-plugin.git",
 		"modules": [{
 			"type": "template",
 			"path": "basic-pod-template"
